src/scss/style.scss
$light-weight: 300;
$regular-weight: 400;
$bold-weight: 700;

$text-primary: #3f3f3f;
$text-paragraph: #222222;
$text-header: #838484;

$coffee-background: #eff1f1;
$header-background: #f7f9f9;
$footer-background: #33393f;

html {
  box-sizing: border-box;
  font-family: "Roboto Condensed", sans-serif;
}
*,
*:before,
*:after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}
body {
  margin: 0;
  height: 100vh;
}

header {
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: center;
  background-color: $header-background;
  padding-bottom: 10px;
}

.nav {
  min-width: 600px;
  width: 80%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  background-color: $header-background;

  img {
    height: 80%;
    margin-top: 10px;
  }

  &__links {
    width: 40%;
    display: flex;
    justify-content: space-between;
    align-items: center;

    a {
      text-decoration: none;
      color: $text-header;
      font-size: 16px;

      &:hover {
        font-weight: bold;
        color: $text-primary;
      }
    }
  }
}

@media screen and (max-width: 800px) {
  .nav {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

.footer {
  min-width: 600px;
  height: 200px;
  width: 100%;
  background-color: $footer-background;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;

  a {
    text-decoration: none;
    color: $text-header;
    font-size: 16px;

    &:hover {
      font-weight: bold;
      color: white;
    }
  }

  &__links {
    width: 35%;
    display: flex;
    justify-content: space-around;
  }

  &__social {
    text-align: center;
    color: white;

    span {
      font-weight: bold;
    }
  }
}

.coffee {
  width: 80%;
  margin: 0 auto;

  &__heading {
    text-transform: uppercase;
    margin-bottom: 2.4rem;

    font: {
      size: 40px;
      weight: 400;
    }
  }

  &__text {
    line-height: 2;
    font-size: 20px;
    margin-bottom: 2rem;
  }

  &__offer {
    display: block;
    font-size: 16px;
    margin-bottom: 2rem;
  }

  &__items {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    margin-bottom: 2rem;
    gap: 2rem;

    @media (max-width: 1000px) {
      flex-direction: column;
      align-items: center;
    }

    .coffee__item {
      width: 48%;
      background-color: $header-background;
      margin: 0 auto;

      @media (max-width: 1000px) {
        width: 70%;
      }

      // @media (max-width: 800px) {
      //   width: 70%;
      // }

      .item__heading {
        font-size: 28px;
        padding: 1rem;
        background-color: $coffee-background;
      }

      img {
        width: 100%;
      }

      .item__bottom {
        width: 100%;
        padding: 1rem;
        background-color: $header-background;

        .item__taste {
          font-style: italic;
          margin-bottom: 1.5rem;
        }

        .item__text {
          line-height: 1.7;
        }
      }
    }
  }
}

/* ------------------------ HOME COFFEE ------------------------ */

.home {
  width: 70%;
  margin: 0 auto;

  &__heading {
    text-transform: uppercase;
    font-weight: 300;
    margin-bottom: 1.5rem;

    &_1 {
      font-size: 40px;
    }

    &_2 {
      font-size: 32px;
    }
  }

  &__image {
    width: 100%;
    margin-bottom: 1.5rem;
  }

  &__contact {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    gap: 6.4rem;
    margin-bottom: 1.5rem;
    font-weight: 300;

    .heading__contact {
      font-weight: 300;
      text-transform: uppercase;
      margin-bottom: 1rem;
    }

    .contact__text_padding-bottom {
      margin-bottom: 0.5rem;
    }
  }

  &__map {
    width: 100%;
  }
}

